# tensorflow_lite_alpine

./: Dockerfile  README.md
builder/: Dockerfile  Dockerfile.bazel  README.md
example/: Dockerfile  README.md  classify-gcc-t4  classify-musl-t4  main.go
